# corgen_updated

./: ActGen2.py  README.md  SubModules.py  activity_gen.py  api.py  course_content_generator.py  genai_logic.py  main.py  modules.py  pyproject.toml  req.txt  speech.txt  suggestion_logic.py  validator.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: Activtity.jsx  Blueprint.jsx  CourseForm.jsx  CourseOutline.jsx  CustomImage.jsx  Fontsize.jsx  GenerateLecture.jsx  GenerateQuiz.jsx  Generate_reading.jsx  Generation.jsx  JourneySteps.jsx  ModuleDropdown.jsx  ModulePage.jsx  ModulesListPage.jsx  Navbar.jsx  NotFound.jsx  QuizEditor.jsx  ReadingEditor.jsx  SubModule.jsx  SuggestionBox.jsx  UserInputPanel.jsx  customCodeblock.jsx  font-size.js
frontend/src/components/css/: Activity.css  BluePrint.css  Blueprint_freezed.css  CourseForm.css  CourseGenerationProgress.css  CourseOutline.css  ErrorPage.css  Fontsize.css  GenerateQuizForm.css  GenerateReading.css  ModificationSelector.css  ModulesListPage.css  ModulesPage.css  Navbar.css  QuizEditor.css  ReadingEditor.css  SuggestionBox.css
