[project]
name = "updated-corgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.115.13",
    "google-genai>=1.21.0",
    "pydantic>=2.11.7",
    "pypdf>=5.6.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
